Fix: AWT Open